--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
   <div class='sidebar menu'>
 
-      <div id="picture" style="background-image: url(http://www.naturaloil.ph/wp-content/uploads/2015/11/John_Doe.jpg)"></div>
+      <div id="picture" style="background-image: url(http://img5.imgtn.bdimg.com/it/u=2164933054,3036738569&fm=21&gp=0.jpg)"></div>
       <p>{{site.description}}</p>
 
       <hr>
