--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
   <div class='sidebar menu'>
 
-      <div id="picture" style="background-image: url(http://img1.imgtn.bdimg.com/it/u=1802903017,3395650174&fm=21&gp=0.jpg)"></div>
+      <div id="picture" style="background-image: url(https://www.flickr.com/photos/144082703@N07/29895804350/in/dateposted-public/)"></div>
       <p>{{site.description}}</p>
 
       <hr>
