--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
   <div class='sidebar menu'>
 
-      <div id="picture" style="background-image: url(https://www.flickr.com/photos/144082703@N07/29895804350/in/dateposted-public/)"></div>
+      <div id="picture" style="background-image: url(http://hdn.xnimg.cn/photos/hdn521/20130427/0810/h_large_AsbK_a74c00000034113e.jpg)"></div>
       <p>{{site.description}}</p>
 
       <hr>
