--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
   <div class='sidebar menu'>
 
-      <div id="picture" style="background-image: url(http://hdn.xnimg.cn/photos/hdn521/20130427/0810/h_large_AsbK_a74c00000034113e.jpg)"></div>
+      <div id="picture" style="background-image: url(http://fmn.rrfmn.com/fmn078/20161008/2330/original_YDTu_2c4e000cd7fa1e84.jpg)"></div>
       <p>{{site.description}}</p>
 
       <hr>
